# torch-kd

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  main.py  model.py  pretrain.py  train.py  train_kd.py  utils.py
src/config/: logits.yaml  logits_kd.yaml  parse.py  soft_target.yaml  student.yaml  teacher.yaml
src/config/cnn/: logits.yaml  soft_target.yaml  student.yaml  teacher.yaml
src/config/resnet/: attention_transfer.yaml  hints.yaml  logits.yaml  similarity_preserving.yaml  soft_target.yaml  student.yaml  student_resnet.yaml  teacher.yaml  teacher_resnet.yaml
src/datasets/: dataset.py
src/kd/: __init__.py  attention_transfer.py  hint.py  logit.py  similarity_preserving.py  soft_target.py
src/loggers/: base.py  tensorboard.py
src/models/: __init__.py  cnn.py  resnet.py  utils.py
