[tool.poetry]
name = "torch-kd"
version = "0.1.0"
description = ""
authors = ["ddpms <qtddpms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "2.2.2+cu121", source = "torch" }
numpy = "^1.26.4"
tensorboard = "^2.16.2"
torchmetrics = "^1.3.2"
torchvision = { version = "0.17.2+cu121", source = "torch" }
wandb = "^0.16.6"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
black = "^24.3.0"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
transformers = "^4.44.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
